# reEmbeddy

./: Cargo.toml  config.json
.fleet/: run.json
src/: handlers.rs  main.rs  model.rs
src/handlers/: pixiv.rs
src/templates/: index.html  index.rs
