[package]
name = "reembeddy"
version = "0.1.0"
edition = "2021"
description = "merges fxdeviantart, xembedder, ddinstagram, and fxraffinity"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "GNU GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", default-features = true, features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"

[features]